--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <title>Dark Script Hub</title>
   <style>
     :root {
-      --dark-bg: #1c1c1c;
-      --medium-bg: #1a1a1a;
-      --light-bg: #2d2d2d;
-      --text-light: #cccccc;
-      --border: #4d4d4d;
+      --dark-bg: #050505;
+      --medium-bg: #0a0a0a;
+      --light-bg: #1a1a1a;
+      --text-light: #e0e0e0;
+      --border: #333333;
       --success: #28a745;
       --error: #dc3545;
       --purple-primary: #8a2be2;
@@ -66,7 +66,7 @@
     .search-input {
       padding: 12px 18px;
       border: 1px solid var(--purple-secondary);
-      background: #1c1c1c;
+      background: #0a0a0a;
       color: var(--text-light);
       border-radius: 8px;
       width: 100%;
@@ -101,7 +101,7 @@
 
     .scripts-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
       gap: 20px;
       margin-bottom: 80px;
     }
@@ -110,11 +110,11 @@
       background: var(--medium-bg);
       border-radius: 10px;
       overflow: hidden;
-      border: 1px solid var(--purple-secondary);
+      border: 1px solid var(--border);
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      height: 320px;
+      height: 280px;
       transition: all 0.3s ease;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
@@ -127,10 +127,10 @@
 
     .script-image {
       width: 100%;
-      height: 140px;
+      height: 120px;
       object-fit: cover;
       background: var(--dark-bg);
-      border-bottom: 1px solid var(--purple-secondary);
+      border-bottom: 1px solid var(--border);
     }
 
     .script-content {
@@ -141,7 +141,7 @@
     }
 
     .script-title {
-      font-size: 16px;
+      font-size: 18px;
       margin-bottom: 8px;
       color: var(--purple-light);
       font-weight: 600;
@@ -149,7 +149,7 @@
 
     .script-info {
       opacity: 0.8;
-      font-size: 13px;
+      font-size: 14px;
       margin-bottom: 10px;
       line-height: 1.4;
     }
@@ -170,6 +170,17 @@
     .copy-button:hover {
       background: var(--purple-secondary);
       transform: translateY(-1px);
+    }
+
+    .script-number {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      padding: 2px 8px;
+      border-radius: 4px;
+      font-size: 12px;
     }
 
     .loader {
@@ -286,10 +297,21 @@
   </div>
 
   <div class="scripts-grid" id="scriptsContainer">
+    <!-- Script cards will be inserted here -->
+    <div class="script-card">
+      <div class="script-number">1</div>
+      <img src="https://placehold.co/280x120/1a1a1a/808080?text=Script+Image" class="script-image">
+      <div class="script-content">
+        <h3 class="script-title">New Script 1</h3>
+        <p class="script-info">Game: Example Game</p>
+        <p class="script-info">Views: 1,234</p>
+        <button class="copy-button">Copy Script</button>
+      </div>
+    </div>
   </div>
 
   <div class="notification" id="notification"></div>
-  <div class="page-indicator" id="pageIndicator">Page 0</div>
+  <div class="page-indicator" id="pageIndicator">Page 1</div>
 
   <script>
     let scriptsData = [];
@@ -364,17 +386,18 @@
             ? (script.image.startsWith('http')
                 ? script.image
                 : `https://scriptblox.com${script.image}`)
-            : 'https://placehold.co/220x120/2d2d2d/808080?text=No+Image';
+            : 'https://placehold.co/280x120/1a1a1a/808080?text=No+Image';
 
           const card = document.createElement('div');
           card.className = 'script-card';
           card.innerHTML = `
+            <div class="script-number">${scriptsData.length - newScripts.length + index + 1}</div>
             <img src="${imageUrl}"
                  class="script-image"
-                 onerror="this.src='https://placehold.co/220x120/2d2d2d/808080?text=Image+Error'">
+                 onerror="this.src='https://placehold.co/280x120/1a1a1a/808080?text=Image+Error'">
             <div class="script-content">
               <h3 class="script-title">${script.title}</h3>
-              <p class="script-info">${script.game?.name || 'No game specified'}</p>
+              <p class="script-info">Game: ${script.game?.name || 'No game specified'}</p>
               <p class="script-info">Views: ${script.views?.toLocaleString() || 'N/A'}</p>
               <button class="copy-button" data-index="${scriptsData.length - newScripts.length + index}">Copy Script</button>
             </div>
